# pkr_goat

./: .dockerignore  .gitignore  Dockerfile  Makefile  docker-compose.yml  test_eval.rs
backend/: .dockerignore  Cargo.toml  Dockerfile
backend/src/: api.rs  categorize.rs  crud.rs  engine.rs  main.rs  models.rs  parser.rs  range.rs  test_poker.rs
db/: init.sql
db/migrations/: 001_add_strategy_context_fields.sql
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  PokerEquityCalculator.tsx  index.css  main.tsx
frontend/src/components/: ActionTreeNavigator.tsx  CardSelector.tsx  CategoryDetailModal.tsx  CategoryFilter.tsx  HeroComboGridTooltip.tsx  HeroRangeModal.tsx  HeroStrategyExpandedModal.tsx  HeroStrategyMatrix.tsx  HeroStrategyTable.tsx  HeroStrategyTableExpandedModal.tsx  HeroStrategyTooltip.tsx  Layout.tsx  PlayingCard.tsx  RangeSelector.tsx
frontend/src/components/config/: Profiles.tsx  Situations.tsx  Strategies.tsx
frontend/src/context/: ThemeContext.tsx
frontend/src/utils/: categoryUtils.ts  heroStrategyUtils.ts  strategyRangeUtils.ts  strategyUtils.ts  themeColors.ts
