[package]
name = "poker-equity-api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1.37", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rayon = "1.10"
rs_poker = { version = "4.1.0", default-features = false }
rand = "0.8"
tower-http = { version = "0.6.11", features = ["cors", "fs"] }
